# iron-barons

./: .gitignore  CMakeLists.txt  README.md
doc/: design.txt
lib/SDL2/: CMakeLists.txt
src/: CMakeLists.txt
src/editor/: main.cpp
src/engine/: CMakeLists.txt  source_groups.cmake
src/engine/core/: cmdline.cpp  cmdline.h  core.cpp  core.h  globals.h  logging.cpp  logging.h  osapi.cpp  osapi.h
src/game/: CMakeLists.txt  IronBarons.cpp  IronBarons.h
